// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/SwitchBall CustomIcon play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <label for="switch-1"
         class="relative inline-flex items-center cursor-pointer"
  >
    <div class="relative inline-flex h-5 w-10">
      <input id="switch-1"
             type="checkbox"
             class="sr-only peer"
      >
      <span class="absolute inset-0 mx-auto rounded-full transition-colors duration-300 peer-checked:bg-info bg-gray-200 dark:bg-gray-700 peer-focus:outline-dashed peer-focus:outline-gray-300 peer-focus:outline-offset-2 dark:peer-focus:outline-gray-600">
      </span>
      <span class="absolute mx-0.5 my-0.5 h-4 w-4 rounded-full bg-white transition-all duration-300 z-10 ltr:left-0 rtl:right-0 ltr:peer-checked:translate-x-5 rtl:peer-checked:-translate-x-5 peer-checked:bg-white shadow-gray-500 dark:shadow-gray-800/50 shadow-sm">
      </span>
      <svg width="18"
           height="18"
           viewbox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class="absolute top-1/2 -translate-y-1/2 w-3 h-3 ltr:left-1 rtl:right-1 text-gray-400 peer-checked:text-white transition-colors duration-300"
      >
        <path opacity="0.5"
              d="M2 12C2 8.22876 2 6.34315 3.17157 5.17157C4.34315 4 6.22876 4 10 4H14C17.7712 4 19.6569 4 20.8284 5.17157C22 6.34315 22 8.22876 22 12C22 15.7712 22 17.6569 20.8284 18.8284C19.6569 20 17.7712 20 14 20H10C6.22876 20 4.34315 20 3.17157 18.8284C2 17.6569 2 15.7712 2 12Z"
              stroke="currentColor"
              stroke-width="1.5"
        >
        </path>
        <path d="M6 8L8.1589 9.79908C9.99553 11.3296 10.9139 12.0949 12 12.0949C13.0861 12.0949 14.0045 11.3296 15.8411 9.79908L18 8"
              stroke="currentColor"
              stroke-width="1.5"
              stroke-linecap="round"
        >
        </path>
      </svg>
    </div>
    <div class="ltr:ml-3 rtl:mr-3">
      <span class="text-sm font-medium text-gray-800 dark:text-gray-100">
        Custom Icon Switch
      </span>
    </div>
  </label>
</div>
`;

exports[`Elements/SwitchBall Default play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <label for="switch-1"
         class="relative inline-flex items-center cursor-pointer"
  >
    <div class="relative inline-flex h-5 w-10">
      <input id="switch-1"
             type="checkbox"
             class="sr-only peer"
      >
      <span class="absolute inset-0 mx-auto rounded-full transition-colors duration-300 peer-checked:bg-primary bg-gray-200 dark:bg-gray-700 peer-focus:outline-dashed peer-focus:outline-gray-300 peer-focus:outline-offset-2 dark:peer-focus:outline-gray-600">
      </span>
      <span class="absolute mx-0.5 my-0.5 h-4 w-4 rounded-full bg-white transition-all duration-300 z-10 ltr:left-0 rtl:right-0 ltr:peer-checked:translate-x-5 rtl:peer-checked:-translate-x-5 peer-checked:bg-white shadow-gray-500 dark:shadow-gray-800/50 shadow-sm">
      </span>
      <svg xmlns="http://www.w3.org/2000/svg"
           width="1em"
           height="1em"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="absolute top-1/2 -translate-y-1/2 w-3 h-3 ltr:left-1 rtl:right-1 text-gray-400 peer-checked:text-white transition-colors duration-300"
      >
        <polyline points="20 6 9 17 4 12">
        </polyline>
      </svg>
    </div>
    <div class="ltr:ml-3 rtl:mr-3">
      <span class="text-sm font-medium text-gray-800 dark:text-gray-100">
        Default Switch
      </span>
    </div>
  </label>
</div>
`;

exports[`Elements/SwitchBall WithSublabel play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <label for="notifications-switch"
         class="relative inline-flex items-center cursor-pointer"
  >
    <div class="relative inline-flex h-5 w-10">
      <input id="notifications-switch"
             type="checkbox"
             class="sr-only peer"
      >
      <span class="absolute inset-0 mx-auto rounded-full transition-colors duration-300 peer-checked:bg-primary bg-gray-200 dark:bg-gray-700 peer-focus:outline-dashed peer-focus:outline-gray-300 peer-focus:outline-offset-2 dark:peer-focus:outline-gray-600">
      </span>
      <span class="absolute mx-0.5 my-0.5 h-4 w-4 rounded-full bg-white transition-all duration-300 z-10 ltr:left-0 rtl:right-0 ltr:peer-checked:translate-x-5 rtl:peer-checked:-translate-x-5 peer-checked:bg-white shadow-gray-500 dark:shadow-gray-800/50 shadow-sm">
      </span>
      <svg xmlns="http://www.w3.org/2000/svg"
           width="1em"
           height="1em"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="absolute top-1/2 -translate-y-1/2 w-3 h-3 ltr:left-1 rtl:right-1 text-gray-400 peer-checked:text-white transition-colors duration-300"
      >
        <polyline points="20 6 9 17 4 12">
        </polyline>
      </svg>
    </div>
    <div class="ltr:ml-3 rtl:mr-3">
      <span class="block text-sm font-medium text-gray-800 dark:text-gray-100">
        Notifications
      </span>
      <span class="block text-xs text-gray-400 dark:text-gray-500">
        Receive email notifications
      </span>
    </div>
  </label>
</div>
`;
